--- a/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
+++ b/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
@@ -7,6 +7,12 @@
         What PBA numbers does your organisation use?
       </h1>
       <hr>
+      <div class="govuk-form-group">
+        <label class="govuk-label govuk-!-font-weight-bold" for="pba-number">
+          PBA number
+        </label>
+        <input class="govuk-input" id="pba-number" type="text" name="pbaNumber" formControlName="pbaNumber">
+      </div>
     </div>
   </div>
 </main>
