--- a/src/register-org/components/organisation-type/organisation-type.component.html
+++ b/src/register-org/components/organisation-type/organisation-type.component.html
@@ -1,7 +1,8 @@
-<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
+<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1" #mainContent>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="organisationTypeErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">
         What type of organisation are you registering?
@@ -9,7 +10,10 @@
       <hr>
       <div class="govuk-body govuk-!-margin-top-6">
         <form [formGroup]="organisationTypeFormGroup">
-          <div class="govuk-form-group">
+          <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': organisationTypeErrors.length > 0 && !showOtherOrganisationTypes}">
+            <p class="govuk-error-message" *ngIf="organisationTypeErrors.length > 0 && !showOtherOrganisationTypes">
+              <span class="govuk-visually-hidden">Error:</span>{{organisationTypeErrors[0].message}}
+            </p>
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h1 class="govuk-fieldset__heading">
@@ -19,7 +23,7 @@
               <div class="govuk-hint">
                 Select the type of company you are registering. If you are not sure, select 'other'.
               </div>
-              <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios" id="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item" *ngFor="let organisationType of organisationTypes$ | async">
                   <input class="govuk-radios__input" type="radio"
                     [id]="organisationType.key" name="organisationType" [value]="organisationType.key" formControlName="organisationType"
@@ -40,7 +44,10 @@
                 <div class="govuk-radios__conditional"
                   [ngClass]="{'govuk-radios__conditional--hidden': showOtherOrganisationTypes === false }"
                   id="other-organisation-type-container">
-                  <div class="govuk-form-group">
+                  <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': organisationTypeErrors.length > 0 && showOtherOrganisationTypes}">
+                    <p class="govuk-error-message" *ngIf="organisationTypeErrors.length > 0 && showOtherOrganisationTypes">
+                      <span class="govuk-visually-hidden">Error:</span>{{organisationTypeErrors[0].message}}
+                    </p>
                     <div class="govuk-form-group">
                       <label class="govuk-label govuk-!-font-weight-bold" for="other-organisation-type">
                         Select another type of organisation
@@ -66,7 +73,7 @@
             </fieldset>
           </div>
           <div class="govuk-button-group">
-            <button class="govuk-button govuk-button--primary">Continue</button>
+            <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinue()">Continue</button>
           </div>
           <a class="govuk-link" href="javascript:void(0)">Cancel</a>
         </form>
