--- a/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
+++ b/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
@@ -1,8 +1,23 @@
-<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
+<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1" #mainContent>
+  <ng-container *ngIf="this.validationErrors.length">
+    <div class="govuk-error-summary govuk-!-margin-top-4" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+      <h2 class="govuk-error-summary__title" id="error-summary-title" #errorSummaryTitleElement>
+        There is a problem
+      </h2>
+      <div class="govuk-error-summary__body">
+        <ul class="govuk-list govuk-error-summary__list">
+          <li *ngFor="let error of validationErrors">
+            <a href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/regulatory-organisation-type#{{error.fieldId}}">
+              {{error.description}}
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:history.back()">Back</a>
-      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">
         Who is your organisation registered with?
@@ -16,7 +31,7 @@
         <form [formGroup]="regulatoryOrganisationTypeFormGroup">
           <div class="govuk-form-group">
             <ng-container formArrayName="regulators">
-              <div *ngFor="let _ of regulators.controls; index as i" [ngClass]="{'govuk-form-group--error': validationErrors && validationErrors.length > 0}">
+              <div *ngFor="let _ of regulators.controls; index as i" [ngClass]="{'govuk-form-group--error': validationErrors.length}">
                 <ng-container [formGroupName]="i">
                   <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -28,7 +43,7 @@
                       For example Solicitor Regulation Authority (SRA) number
                     </div>
                     <div *ngIf="fieldHasErrorMessage('regulator-type' + i)" class="govuk-error-message">
-                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrgTypeMessageEnum.NO_REGULATORY_ORG_SELECTED}}
+                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATORY_ORG_SELECTED}}
                     </div>
                     <select class="govuk-select govuk-!-width-two-thirds"
                       [ngClass]="{'govuk-select--error': fieldHasErrorMessage('regulator-type' + i)}"
@@ -51,7 +66,7 @@
                         Enter the name of the professional body or regulator
                       </label>
                       <div *ngIf="fieldHasErrorMessage('regulator-name' + i)" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrgTypeMessageEnum.NO_REGULATOR_NAME}}
+                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATOR_NAME}}
                       </div>
                       <input class="govuk-input govuk-!-width-two-thirds"
                         [ngClass]="{'govuk-input--error': fieldHasErrorMessage('regulator-name' + i)}"
