--- a/src/register-org/containers/registered-address/registered-address.component.html
+++ b/src/register-org/containers/registered-address/registered-address.component.html
@@ -19,7 +19,7 @@
           (internationalModeStart)="onInternationalModeStart()"></xuilib-write-address-field>
 
         <div class="govuk-button-group">
-          <button class="govuk-button" data-module="govuk-button">
+          <button class="govuk-button" data-module="govuk-button" (click)="onContinue()">
             Continue
           </button>
         </div>
