--- a/src/register-org/components/office-addresses/office-addresses.component.html
+++ b/src/register-org/components/office-addresses/office-addresses.component.html
@@ -12,6 +12,13 @@
           </legend>
           <hr>
         </fieldset>
+        <div class="govuk-button-group">
+          <button class="govuk-button govuk-button--primary" data-module="govuk-button" (click)="onContinue()">
+            Continue
+          </button>
+        </div>
+
+        <a class="govuk-link" href="javascript:void(0)">Cancel</a>
       </div>
     </div>
   </div>
