EUI-8781 Register other org - Regulator display amendment

--- a/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
+++ b/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
@@ -76,7 +76,7 @@
 
                     <div *ngIf="regulators.controls[i].get('organisationRegistrationNumber')" class="govuk-!-margin-top-4">
                       <label class="govuk-label govuk-!-font-weight-bold" for="'organisation-registration-number' + i">
-                        Enter your organisation's registration number (optional)
+                        Enter your organisation's registration number
                       </label>
                       <input class="govuk-input govuk-!-width-two-thirds" type="text" [id]="'organisation-registration-number' + i"
                         name="organisationRegistrationNumber" formControlName="organisationRegistrationNumber">
