Make fix changes

--- a/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
+++ b/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
@@ -93,12 +93,13 @@
                 Add another regulator
               </button>
             </div>
-            <div class="govuk-button-group">
-              <button class="govuk-button govuk-button--primary" (click)="onContinue()">Continue</button>
-            </div>
-            <a class="govuk-link" href="javascript:void(0)">Cancel</a>
-          </form>
-        </div>
+          </div>
+          <div class="govuk-button-group">
+            <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinueClicked()">Continue</button>
+          </div>
+          <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        </form>
       </div>
     </div>
-  </main>  
+  </div>
+</main>
