EUI-8728 Register other org - personal regulator

--- a/src/register-org/components/individual-registered-with-regulator-details/individual-registered-with-regulator-details.component.html
+++ b/src/register-org/components/individual-registered-with-regulator-details/individual-registered-with-regulator-details.component.html
@@ -25,7 +25,7 @@
       <hr>
       <div class="govuk-body govuk-!-margin-top-6">
         <p>Give as much detail as you can on the regulator or professional body that
-          are registered with.</p>
+          are personally registered with.</p>
         <app-regulator-details [regulatorType]="regulatorType.Individual"></app-regulator-details>
       </div>
     </div>
