--- a/src/register-org/components/regulator-details/regulator-details.component.html
+++ b/src/register-org/components/regulator-details/regulator-details.component.html
@@ -1,84 +1,110 @@
-<form [formGroup]="regulatorDetailsFormGroup">
-  <div class="govuk-form-group">
-    <ng-container formArrayName="regulators">
-      <div *ngFor="let _ of regulators.controls; index as i"
-        class="govuk-!-margin-bottom-6"
-        [ngClass]="{'govuk-form-group--error': validationErrors.length}">
-        <ng-container [formGroupName]="i">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-              <h1 class="govuk-fieldset__heading govuk-!-margin-top-4">
-                <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
-                  Select the type of regulator
-                </span>
-                <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
-                  Select the type of regulatory organisation
-                </span>
-              </h1>
-            </legend>
-            <div class="govuk-hint">
-              For example Solicitor Regulation Authority (SRA) number
-            </div>
-            <div *ngIf="fieldHasErrorMessage('regulator-type' + i)" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATORY_ORG_SELECTED}}
-            </div>
-            <div *ngIf="duplicateErrorMessage(i)" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.DUPLICATE_REGULATOR}}
-            </div>
-            <select class="govuk-select govuk-!-width-two-thirds"
-              [ngClass]="{'govuk-select--error': fieldHasErrorMessage('regulator-type' + i)}"
-              [id]="'regulator-type' + i"
-              name="regulatorType" formControlName="regulatorType"
-              (change)="onOptionSelected($event.target.value, i)">
-              <option [ngValue]="SELECT_A_VALUE" disabled>--Select a value--</option>
-              <option *ngFor="let regulatorType of regulatorTypes$ | async"
-                [value]="regulatorType.id">
-                {{regulatorType.name}}
-              </option>
-            </select>
-            <button *ngIf="regulators.controls.length > 1" (click)="onRemoveBtnClicked(i)" [id]="'remove-button' + i"
-              class="govuk-button govuk-button--secondary govuk-!-margin-left-4 govuk-!-margin-bottom-0">
-              Remove
-            </button>
+<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1" #mainContent>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
+      <span class="govuk-caption-xl">Register an organisation</span>
+      <h1 class="govuk-heading-xl">
+        <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
+          What regulator are you (as an individual) registered with?
+        </span>
+        <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
+          What regulator are you (as an individual) registered with?
+        </span>
+      </h1>
+      <hr>
+      <div class="govuk-body govuk-!-margin-top-6">
+        <p *ngIf="regulatorType === regulatorTypeEnum.Individual">
+          Give as much detail as you can on the regulator or professional body that are personally registered with.
+        </p>
+        <p *ngIf="regulatorType === regulatorTypeEnum.Organisation">
+          
+        </p>
+        <form [formGroup]="regulatorDetailsFormGroup">
+          <div class="govuk-form-group">
+            <ng-container formArrayName="regulators">
+              <div *ngFor="let _ of regulators.controls; index as i"
+                class="govuk-!-margin-bottom-6"
+                [ngClass]="{'govuk-form-group--error': validationErrors.length}">
+                <ng-container [formGroupName]="i">
+                  <fieldset class="govuk-fieldset">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                      <h1 class="govuk-fieldset__heading govuk-!-margin-top-4">
+                        <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
+                          Select the type of regulator
+                        </span>
+                        <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
+                          Select the type of regulatory organisation
+                        </span>
+                      </h1>
+                    </legend>
+                    <div class="govuk-hint">
+                      For example Solicitor Regulation Authority (SRA) number
+                    </div>
+                    <div *ngIf="fieldHasErrorMessage('regulator-type' + i)" class="govuk-error-message">
+                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATORY_ORG_SELECTED}}
+                    </div>
+                    <div *ngIf="duplicateErrorMessage(i)" class="govuk-error-message">
+                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.DUPLICATE_REGULATOR}}
+                    </div>
+                    <select class="govuk-select govuk-!-width-two-thirds"
+                      [ngClass]="{'govuk-select--error': fieldHasErrorMessage('regulator-type' + i)}"
+                      [id]="'regulator-type' + i"
+                      name="regulatorType" formControlName="regulatorType"
+                      (change)="onOptionSelected($event.target.value, i)">
+                      <option [ngValue]="SELECT_A_VALUE" disabled>--Select a value--</option>
+                      <option *ngFor="let regulatorType of regulatorTypes$ | async"
+                        [value]="regulatorType.id">
+                        {{regulatorType.name}}
+                      </option>
+                    </select>
+                    <button *ngIf="regulators.controls.length > 1" (click)="onRemoveBtnClicked(i)" [id]="'remove-button' + i"
+                      class="govuk-button govuk-button--secondary govuk-!-margin-left-4 govuk-!-margin-bottom-0">
+                      Remove
+                    </button>
 
-            <div *ngIf="regulators.controls[i].get('regulatorName')" class="govuk-!-margin-top-4">
-              <label class="govuk-label govuk-!-font-weight-bold" for="'regulator-name' + i">
-                Enter the name of the professional body or regulator
-              </label>
-              <div *ngIf="fieldHasErrorMessage('regulator-name' + i)" class="govuk-error-message">
-                <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATOR_NAME}}
-              </div>
-              <input class="govuk-input govuk-!-width-two-thirds"
-                [ngClass]="{'govuk-input--error': fieldHasErrorMessage('regulator-name' + i)}"
-                type="text" [id]="'regulator-name' + i"
-                name="regulatorName" formControlName="regulatorName">
-            </div>
+                    <div *ngIf="regulators.controls[i].get('regulatorName')" class="govuk-!-margin-top-4">
+                      <label class="govuk-label govuk-!-font-weight-bold" for="'regulator-name' + i">
+                        Enter the name of the professional body or regulator
+                      </label>
+                      <div *ngIf="fieldHasErrorMessage('regulator-name' + i)" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATOR_NAME}}
+                      </div>
+                      <input class="govuk-input govuk-!-width-two-thirds"
+                        [ngClass]="{'govuk-input--error': fieldHasErrorMessage('regulator-name' + i)}"
+                        type="text" [id]="'regulator-name' + i"
+                        name="regulatorName" formControlName="regulatorName">
+                    </div>
 
-            <div *ngIf="regulators.controls[i].get('organisationRegistrationNumber')" class="govuk-!-margin-top-4">
-              <label class="govuk-label govuk-!-font-weight-bold" for="'organisation-registration-number' + i">
-                Enter your organisation's registration number
-              </label>
-              <div *ngIf="fieldHasErrorMessage('organisation-registration-number' + i)" class="govuk-error-message">
-                <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGISTRATION_NUMBER}}
+                    <div *ngIf="regulators.controls[i].get('organisationRegistrationNumber')" class="govuk-!-margin-top-4">
+                      <label class="govuk-label govuk-!-font-weight-bold" for="'organisation-registration-number' + i">
+                        Enter your organisation's registration number
+                      </label>
+                      <div *ngIf="fieldHasErrorMessage('organisation-registration-number' + i)" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGISTRATION_NUMBER}}
+                      </div>
+                      <input class="govuk-input govuk-!-width-two-thirds"
+                        [ngClass]="{'govuk-input--error': fieldHasErrorMessage('organisation-registration-number' + i)}"
+                        type="text" [id]="'organisation-registration-number' + i"
+                        name="organisationRegistrationNumber" formControlName="organisationRegistrationNumber">
+                    </div>
+                  </fieldset>
+                </ng-container>
               </div>
-              <input class="govuk-input govuk-!-width-two-thirds"
-                [ngClass]="{'govuk-input--error': fieldHasErrorMessage('organisation-registration-number' + i)}"
-                type="text" [id]="'organisation-registration-number' + i"
-                name="organisationRegistrationNumber" formControlName="organisationRegistrationNumber">
+            </ng-container>
+            <div *ngIf="showAddRegulatorButton()" class="govuk-!-margin-top-4">
+              <button type="button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4" id="add-another-regulator"
+                (click)="onAddNewBtnClicked()">
+                Add another regulator
+              </button>
             </div>
-          </fieldset>
-        </ng-container>
+          </div>
+          <div class="govuk-button-group">
+            <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinueClicked()">Continue</button>
+          </div>
+          <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        </form>
       </div>
-    </ng-container>
-    <div *ngIf="showAddRegulatorButton()" class="govuk-!-margin-top-4">
-      <button type="button" class="govuk-button govuk-button--secondary govuk-!-margin-top-4" id="add-another-regulator"
-        (click)="onAddNewBtnClicked()">
-        Add another regulator
-      </button>
     </div>
   </div>
-  <div class="govuk-button-group">
-    <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinueClicked()">Continue</button>
-  </div>
-  <a class="govuk-link" href="javascript:void(0)">Cancel</a>
-</form>
+</main>
