EUI-8784 Register other org - PBA number functionality

--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -8,7 +8,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                which services will your organisation need to access?
+                Which services will your organisation need to access?
               </h1>
             </legend>
             <hr>
