EUI-8768 Register other org - Cancel link functionality

--- a/src/register-org/components/document-exchange-reference-details/document-exchange-reference-details.component.html
+++ b/src/register-org/components/document-exchange-reference-details/document-exchange-reference-details.component.html
@@ -34,7 +34,7 @@
           <div class="govuk-button-group">
             <button class="govuk-button govuk-button--primary" (click)="onContinue()">Continue</button>
           </div>
-          <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+          <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
         </form>
       </div>
     </div>
