--- a/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
@@ -56,7 +56,7 @@
           </button>
         </div>
 
-        <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
       </form>
     </div>
   </div>
