--- a/src/register-org/components/office-addresses/office-addresses.component.html
+++ b/src/register-org/components/office-addresses/office-addresses.component.html
@@ -17,8 +17,7 @@
             Continue
           </button>
         </div>
-
-        <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
       </div>
     </div>
   </div>
