--- a/src/register-org/components/payment-by-account/payment-by-account.component.html
+++ b/src/register-org/components/payment-by-account/payment-by-account.component.html
@@ -55,7 +55,7 @@
             Continue
           </button>
         </div>
-        <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
       </form>
     </div>
   </div>
