--- a/src/register-org/components/registered-with-regulator/registered-with-regulator.component.html
+++ b/src/register-org/components/registered-with-regulator/registered-with-regulator.component.html
@@ -52,8 +52,7 @@
             Continue
           </button>
         </div>
-
-        <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+        <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
       </form>
     </div>
   </div>
