--- a/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
+++ b/src/register-org/components/regulatory-organisation-type/regulatory-organisation-type.component.html
@@ -97,7 +97,7 @@
           <div class="govuk-button-group">
             <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinueClicked()">Continue</button>
           </div>
-          <a class="govuk-link" href="javascript:void(0)">Cancel</a>
+          <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
         </form>
       </div>
     </div>
