--- a/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
+++ b/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
@@ -2,6 +2,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <app-hmcts-error-summary
+      *ngIf="summaryErrors && !summaryErrors.isFromValid"
+      [errorMessages]="summaryErrors.items"
+      [header]="summaryErrors.header">
+    </app-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">
         What PBA numbers does your organisation use?
