EUI-8801 Register other org - Contact details functionality

--- a/src/register-org/components/contact-details/contact-details.component.html
+++ b/src/register-org/components/contact-details/contact-details.component.html
@@ -40,7 +40,7 @@
           <input class="govuk-input" id="work-email-address" type="text" name="workEmailAddress" formControlName="workEmailAddress">
         </div>
         <div class="govuk-button-group">
-          <button class="govuk-button" data-module="govuk-button" (click)="onContinue()">
+          <button class="govuk-button govuk-button--primary" data-module="govuk-button" (click)="onContinue()">
             Continue
           </button>
         </div>
