--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -1,7 +1,8 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <a class="govuk-back-link" href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/regulatory-organisation-type">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="servicesFormGroup">
         <div class="govuk-form-group">
@@ -18,15 +19,20 @@
             <div class="govuk-hint">
               You must select at least one option
             </div>
+            <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': validationErrors?.length}">
+            <div *ngIf="validationErrors.length > 0" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> {{validationErrors[0].message}}
+            </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item" *ngFor="let service of services">
                 <input class="govuk-checkboxes__input" [id]="service.key" type="checkbox" [value]="service.value_en"
-                  name="services" formControlName="services" [checked]="service.selected" (change)="onServicesSelectionChange($event)">
+                  name="services" [checked]="service.selected" (change)="onServicesSelectionChange($event)">
                 <label class="govuk-label govuk-checkboxes__label" [for]="service.key">
                   {{service.value_en}}
                 </label>
               </div>
             </div>
+          </div>
           </fieldset>
         </div>
         <div class="govuk-button-group">
