--- a/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
+++ b/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
@@ -1,23 +1,8 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
-  <ng-container *ngIf="registeredWithRegulatorError">
-    <div class="govuk-error-summary govuk-!-margin-top-4" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-      <h2 class="govuk-error-summary__title" id="error-summary-title" #errorSummaryTitleElement>
-        There is a problem
-      </h2>
-      <div class="govuk-error-summary__body">
-        <ul class="govuk-list govuk-error-summary__list">
-          <li>
-            <a href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator#{{registeredWithRegulatorError.fieldId}}">
-              {{registeredWithRegulatorError.description}}
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="registeredWithRegulatorFormGroup">
         <div class="govuk-form-group">
